View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026834 | Open CASCADE | OCCT:Visualization | public | 2015-11-02 17:47 | 2016-04-20 15:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | Android | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026834: Visualization, OpenGl_FrameBuffer - use GL_DEPTH_COMPONENT instead of GL_DEPTH for texture initialization | ||||
Description | getDepthDataFormat method uses incorrect enumeration for GL_DEPTH_COMPONENT texture. | ||||
Steps To Reproduce | build OCCT on android | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26834 has been created by ibs. SHA-1: 8e1888d68d4de1d7f3f494adc8317832369943d0 Detailed log of new commits: Author: ibs Date: Mon Nov 2 17:41:25 2015 +0300 0026834: Visualization, OpenGl_FrameBuffer - use GL_DEPTH_COMPONENT instead of GL_DEPTH for texture initialization getDepthDataFormat method uses correct enumeration for GL_DEPTH_COMPONENT texture now |
|
dear kgv, please review CR26834 branch of OCCT git |
|
Please check compilation, testing is not needed. |
|
Branch CR26834 has been deleted by kgv. SHA-1: 8e1888d68d4de1d7f3f494adc8317832369943d0 |
occt: master 2e26cf76 2015-11-02 14:41:25
Committer: bugmaster Details Diff |
0026834: Visualization, OpenGl_FrameBuffer - use GL_DEPTH_COMPONENT instead of GL_DEPTH for texture initialization getDepthDataFormat method uses correct enumeration for GL_DEPTH_COMPONENT texture now |
Affected Issues 0026834 |
|
mod - src/OpenGl/OpenGl_FrameBuffer.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-11-02 17:47 |
|
New Issue | |
2015-11-02 17:47 |
|
Assigned To | => ibs |
2015-11-02 17:49 | kgv | Relationship added | child of 0026711 |
2015-11-02 17:49 | kgv | Severity | minor => trivial |
2015-11-02 17:49 | kgv | Product Version | 6.9.1 => |
2015-11-02 17:53 | git | Note Added: 0047731 | |
2015-11-02 17:54 |
|
Note Added: 0047732 | |
2015-11-02 17:54 |
|
Assigned To | ibs => kgv |
2015-11-02 17:54 |
|
Status | new => resolved |
2015-11-02 17:54 |
|
Steps to Reproduce Updated | |
2015-11-02 18:01 | kgv | Note Added: 0047735 | |
2015-11-02 18:01 | kgv | Assigned To | kgv => bugmaster |
2015-11-02 18:01 | kgv | Status | resolved => reviewed |
2015-11-02 18:06 |
|
Assigned To | bugmaster => mkv |
2015-11-02 18:15 |
|
Assigned To | mkv => bugmaster |
2015-11-06 12:35 | bugmaster | Changeset attached | => occt master 2e26cf76 |
2015-11-06 12:35 | bugmaster | Status | reviewed => verified |
2015-11-06 12:35 | bugmaster | Resolution | open => fixed |
2016-04-17 14:26 | git | Note Added: 0053176 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |