0026834: Visualization, OpenGl_FrameBuffer - use GL_DEPTH_COMPONENT instead of GL_DEPTH for texture initialization

getDepthDataFormat method uses correct enumeration for GL_DEPTH_COMPONENT texture now